--- a/roles/os_etchosts/tasks/main.yml
+++ b/roles/os_etchosts/tasks/main.yml
@@ -1,7 +1,7 @@
 # SAP OS Tools - /etc/hosts
 
 - name: SAP OS Tools - /etc/hosts
-  include_tasks: update_etchosts.yml
+  ansible.builtin.include_tasks: update_etchosts.yml
   loop: "{{ os_etchosts_entries }}"
   loop_control:
     loop_var: passed_entry
