--- a/roles/sap_fapolicy/tasks/enable_fapolicy.yml
+++ b/roles/sap_fapolicy/tasks/enable_fapolicy.yml
@@ -1,5 +1,5 @@
 - name: SAP Faplocy - Service fapolicy state - enable
-  command: "systemctl enable fapolicyd"
+  ansible.builtin.command: "systemctl enable fapolicyd"
 
 - name: SAP Faplocy - Service fapolicy state - start
-  command: "systemctl start fapolicyd"
+  ansible.builtin.command: "systemctl start fapolicyd"
