--- a/roles/sap_firewall/tasks/enable_firewall.yml
+++ b/roles/sap_firewall/tasks/enable_firewall.yml
@@ -1,5 +1,5 @@
 - name: SAP Firewall - Service firewalld state - enable
-  command: "systemctl enable firewalld"
+  ansible.builtin.command: "systemctl enable firewalld"
 
 - name: SAP Firewall - Service firewalld state - start
-  command: "systemctl start firewalld"
+  ansible.builtin.command: "systemctl start firewalld"
