--- a/roles/sap_firewall/tasks/generate_ports_hana.yml
+++ b/roles/sap_firewall/tasks/generate_ports_hana.yml
@@ -1,5 +1,5 @@
 - name: SAP Firewall - Generate Ports - SAP HANA - {{ sap_firewall_instance_nr }}
-  set_fact:
+  ansible.builtin.set_fact:
     sap_firewall_ports:
       - "1128"
       - "1129"
