--- a/roles/sap_rhsm/tasks/main.yml
+++ b/roles/sap_rhsm/tasks/main.yml
@@ -1,2 +1,2 @@
 - name: SAP OS Tools - RedHat Subscription Manager
-  include_tasks: "rhsm_{{ sap_rhsm_function }}.yml"
+  ansible.builtin.include_tasks: "rhsm_{{ sap_rhsm_function }}.yml"
