--- a/roles/sap_fapolicy/tasks/get_user_uid.yml
+++ b/roles/sap_fapolicy/tasks/get_user_uid.yml
@@ -3,14 +3,15 @@
 # This task requires the variable passed_user
 
 - name: Get UID "{{ passed_user }}"
-  shell: |
+  ansible.builtin.shell: |
         id -u {{ passed_user }}
   args:
      executable: /bin/bash
   register: get_user_uid_register
 
 # Return value
-- set_fact:
+- name: return value from previous fact
+  ansible.builtin.set_fact:
     sap_fapolicy_uid: "{{ get_user_uid_register.stdout.split() }}"
 
 # - name: Merge the sap_fapolicy_uid_list with result
