--- a/roles/sap_firewall/tasks/main.yml
+++ b/roles/sap_firewall/tasks/main.yml
@@ -4,23 +4,23 @@
   block:
 
   - name: SAP Firewall - Gathering Package Facts
-    package_facts:
+    ansible.builtin.package_facts:
       manager: auto
   
   - name: SAP Firewall - Setup
     block:
 
     - name: SAP Firewall - Enable Firewall
-      include_tasks: "enable_firewall.yml"
+      ansible.builtin.include_tasks: "enable_firewall.yml"
 
     - name: SAP Firewall - Generate Ports
-      include_tasks: "generate_ports_{{ sap_firewall_type }}.yml"
+      ansible.builtin.include_tasks: "generate_ports_{{ sap_firewall_type }}.yml"
       
     - name: SAP Firewall - Add ports
       block:
 
       - name: SAP Firewall - Add Ports
-        include_tasks: update_firewall.yml
+        ansible.builtin.include_tasks: update_firewall.yml
         loop: "{{ sap_firewall_ports }}"
         loop_control:
           loop_var: passed_port
@@ -29,7 +29,7 @@
         - sap_firewall_ports is defined
     
     - name: SAP Firewall - Reload Firewall
-      shell: |
+      ansible.builtin.shell: |
         firewall-cmd --reload
 
     when:
