--- a/roles/sap_firewall/tasks/update_firewall.yml
+++ b/roles/sap_firewall/tasks/update_firewall.yml
@@ -2,7 +2,7 @@
 # This task requires the variable passed_port
 
 - name: SAP Firewall - Update Firewall - {{ passed_port }}/tcp
-  firewalld:
+  ansible.posix.firewalld:
     zone: public
     port: "{{ passed_port }}/tcp"
     permanent: yes
