--- a/roles/sap_hana_backint/tasks/clean/clean_backups_tenants.yml
+++ b/roles/sap_hana_backint/tasks/clean/clean_backups_tenants.yml
@@ -1,13 +1,13 @@
 
 - name: SAP HANA Backint - Clean - Execute hanacleaner.py for TENANTDB - {{ passed_sap_hana_tenant }}
-  shell: |
+  ansible.builtin.shell: |
           source ~/.profile && python {{ backint_directory }}/hanacleaner.py -k {{ tenant_backup_user }} -be {{ backup_retention }} -bb true -fs
   args:
       executable: /bin/bash
-  become: yes
+  become: true
   become_user: "{{ passed_sap_hana_sid | lower }}adm"
   register: sap_hana_backint_clean_execute_hanacleaner
 
 - name: SAP HANA Backint - Clean - Output hanacleaner execution
-  debug:
+  ansible.builtin.debug:
     msg: "{{ sap_hana_backint_clean_execute_hanacleaner }}.stdout_lines"
