--- a/roles/sap_hana_backint/tasks/execute/execute.yml
+++ b/roles/sap_hana_backint/tasks/execute/execute.yml
@@ -3,7 +3,7 @@
 - name: SAP HANA Backint - Execute - sap_hana_sid is provided
   block:
     - name: SAP HANA Backint - Execute - Execute backups for {{ sap_hana_sid }}
-      include_tasks: execute_backup.yml
+      ansible.builtin.include_tasks: execute_backup.yml
   when: sap_hana_sid != "all"
 
 
@@ -12,7 +12,7 @@
 - name: SAP HANA Backint - Execute - All HDB SIDs in hostname {{ ansible_hostname }}
   block:
   - name: SAP HANA Backint - Execute - Execute backups for each SID
-    include_tasks: execute_backup.yml
+    ansible.builtin.include_tasks: execute_backup.yml
     register: execute_backup_reg
     loop: "{{ sap_hana_sid_all }}"
     loop_control:
