--- a/roles/sap_hana_backint/tasks/execute/execute_backup.yml
+++ b/roles/sap_hana_backint/tasks/execute/execute_backup.yml
@@ -1,15 +1,15 @@
 - name: SAP HANA Backint - Execute - Set fact for SID
-  set_fact:
+  ansible.builtin.set_fact:
     passed_sap_hana_sid: "{{ sap_hana_sid }}"
   when: sap_hana_sid != "all"
 
 # Set hdbuserstore users
 - name: SAP HANA Backint - Execute - Set facts for hdbuserstore users
-  set_fact:
+  ansible.builtin.set_fact:
     tenant_backup_user: "HDB_TENANT_{{ passed_sap_hana_sid }}_BACKUP_USER"
 
 - name: SAP HANA Backint - Output executing information
-  debug:
+  ansible.builtin.debug:
     msg:
       - "Executing backup for: "
       - "SAP HANA SID   -     {{ passed_sap_hana_sid }} "
@@ -17,11 +17,11 @@
 
 # Execute backup for SYSTEMDB
 - name: SAP HANA Backint - Execute - SYSTEMDB - {{ passed_sap_hana_sid }}
-  include_tasks: execute_backup_systemdb.yml
+  ansible.builtin.include_tasks: execute_backup_systemdb.yml
 
 # Execute backup for Tenant DBs - loop through {{ sap_hana_tenant }}
 - name: SAP HANA Backint - Execute - TENANTDB - {{ passed_sap_hana_sid }}
-  include_tasks: execute_backup_tenants.yml
+  ansible.builtin.include_tasks: execute_backup_tenants.yml
   register: backup_hana_tenant
   loop: "{{ sap_hana_tenant }}"
   loop_control:
