--- a/roles/sap_hana_backint/tasks/get_all_sap_hana_tenant.yml
+++ b/roles/sap_hana_backint/tasks/get_all_sap_hana_tenant.yml
@@ -3,11 +3,11 @@
 # This task requires the variable sap_hana_sid and hdbuserstore system_backup_user
 
 - name: SAP HANA Backint - Get info - Get Tenant DBs of SAP HANA Database Server {{ sap_hana_sid }}
-  shell: |
+  ansible.builtin.shell: |
     /usr/sap/{{ sap_hana_sid }}/SYS/exe/hdb/hdbsql -x -a -U {{ system_backup_user }} "select DATABASE_NAME from SYS.M_DATABASES WHERE DATABASE_NAME != 'SYSTEMDB'" | sed 's/\"//g'
   args:
     executable: /bin/bash
-  become: yes
+  become: true
   become_user: "{{ sap_hana_sid | lower }}adm"
   register: get_all_sap_hana_tenant
 
@@ -19,5 +19,5 @@
 
 # Return value - sap_hana_tenant
 - name: SAP HANA Backint - Get info - Set facts for all SAP HANA Tenants
-  set_fact:
+  ansible.builtin.set_fact:
     sap_hana_tenant: "{{ get_all_sap_hana_tenant.stdout.split() }}"
