--- a/roles/sap_hana_backint/tasks/get_sap_hana_instance_nr.yml
+++ b/roles/sap_hana_backint/tasks/get_sap_hana_instance_nr.yml
@@ -3,7 +3,7 @@
 # This task requires the variable sap_hana_sid
 
 - name: SAP HANA Backint - Get info - Get instance number of SAP HANA Database Server {{ sap_hana_sid }}
-  shell: |
+  ansible.builtin.shell: |
     ls -1 /usr/sap/{{ sap_hana_sid }} | grep HDB | sed 's/...//' | head -1
   args:
     executable: /bin/bash
@@ -11,5 +11,5 @@
 
 # Return value - sap_hana_instance_nr_one
 - name: SAP HANA Backint - Get info - Set facts for SAP HANA Instance Number
-  set_fact:
+  ansible.builtin.set_fact:
     sap_hana_instance_nr_one: "{{ get_sap_hana_instance_nr.stdout.split() }}"
