--- a/roles/sap_hana_backint/tasks/python37.yml
+++ b/roles/sap_hana_backint/tasks/python37.yml
@@ -1,5 +1,5 @@
 - name: Python (System) - Install Python package manager pip3, git, make, compiler/library for C and C++, and compilers for zlib, openssl, libssl
-  yum:
+  ansible.builtin.yum:
     name:
       - python3-pip
       - gcc
@@ -13,7 +13,7 @@
     state: present
 
 - name: Python (System) - Install virtualenv to System Python 3.x
-  pip:
+  ansible.builtin.pip:
     name:
       - virtualenv
 
@@ -38,7 +38,7 @@
 
 - name: Python altinstall - Configure Python build
 #  become_user: "{{ sap_hana_sid | lower }}adm"
-  command: ./configure --enable-share=no --prefix={{ python_altinstall_path }}/python_backint_local
+  ansible.builtin.command: ./configure --enable-share=no --prefix={{ python_altinstall_path }}/python_backint_local
   args:
     chdir: "{{ python_build_path }}/Python-{{ python_version }}"
   register: python_configured
@@ -47,14 +47,14 @@
 - name: Python altinstall - Make Python build
 #  become_user: "{{ sap_hana_sid | lower }}adm"
 #  shell: make && make altinstall
-  shell: make altinstall
+  ansible.builtin.shell: make altinstall
   args:
     chdir: "{{ python_build_path }}/Python-{{ python_version }}"
-  become: yes
+  become: true
   when: python_configured.changed
 
 - name: Python altinstall - Create virtualenv for Python build, install baseline dependencies to virtualenv, and set variable. Do not inherit system Python modules
-  pip:
+  ansible.builtin.pip:
     name:
       - wheel
       - requests
@@ -75,5 +75,5 @@
     - "{{ python_altinstall_path }}/python_backint"
 
 - name: Python altinstall - Set fact for backint file
-  set_fact:
+  ansible.builtin.set_fact:
     python_37_binary: "{{ python_altinstall_path }}/python_backint/bin/python3"
