--- a/roles/sap_hana_backint/tasks/setup/setup.yml
+++ b/roles/sap_hana_backint/tasks/setup/setup.yml
@@ -2,7 +2,7 @@
 # 1. Prepare backint
 
 - name: SAP HANA Backint - Setup - Create temporary directory
-  tempfile:
+  ansible.builtin.tempfile:
     state: directory
     suffix: sap_hana_backint_setup_temp_dir
   register: sap_hana_backint_setup_temp_dir
@@ -14,7 +14,7 @@
 - name: SAP HANA Backint - Setup - sap_hana_sid is provided
   block:
     - name: SAP HANA Backint - Setup - Setup Backint for {{ sap_hana_sid }}
-      include_tasks: "setup_backint_{{ target_platform }}.yml"
+      ansible.builtin.include_tasks: "setup_backint_{{ target_platform }}.yml"
   when: sap_hana_sid != "all"
 
 
@@ -23,7 +23,7 @@
 - name: SAP HANA Backint - Setup - All HDB SIDs in hostname {{ ansible_hostname }}
   block:
     - name: SAP HANA Backint - Setup - Setup Backint for each SID
-      include_tasks: "setup_backint_{{ target_platform }}.yml"
+      ansible.builtin.include_tasks: "setup_backint_{{ target_platform }}.yml"
       loop: "{{ sap_hana_sid_all }}"
       loop_control:
         loop_var: passed_sap_hana_sid
@@ -35,12 +35,12 @@
 
 # Setup SYSTEMDB
 - name: SAP HANA Backint - Setup - Setup SYSTEMDB of {{ sap_hana_sid }}
-  include_tasks: setup_systemdb.yml
+  ansible.builtin.include_tasks: setup_systemdb.yml
   register: setup_hana_systemdb
 
 # Setup Tenant DBs - loop through {{ sap_hana_tenant }}
 - name: SAP HANA Backint - Setup - Setup Tenant DBs of {{ sap_hana_sid }}
-  include_tasks: setup_tenants.yml
+  ansible.builtin.include_tasks: setup_tenants.yml
   register: setup_hana_tenant
   loop: "{{ sap_hana_tenant }}"
   loop_control:
@@ -50,6 +50,6 @@
 # 4. Cleanup
 
 - name: SAP HANA Backint - Setup - Clean up
-  file:
+  ansible.builtin.file:
     path: "{{ sap_hana_backint_setup_temp_dir.path }}"
     state: absent
