--- a/roles/sap_hana_backint/tasks/setup/setup_backint_azure_backup_rsv.yml
+++ b/roles/sap_hana_backint/tasks/setup/setup_backint_azure_backup_rsv.yml
@@ -1,19 +1,19 @@
 # Microsoft Azure
 
 - name: SAP HANA Backint - Execute - Set fact for SID
-  set_fact:
+  ansible.builtin.set_fact:
     passed_sap_hana_sid: "{{ sap_hana_sid }}"
   when: sap_hana_sid != "all"
 
 # Set initial facts
 - name: SAP HANA Backint - Setup - MS Azure Backup to MS Azure RSV - Set facts
-  set_fact:
+  ansible.builtin.set_fact:
     sap_hana_backint_setup_backint_directory: "/usr/sap/{{ passed_sap_hana_sid }}/SYS/global/hdb/opt"
     passed_sap_hana_instance_nr: "{{ sap_hana_instance_nr_one[0] }}"
 
 
 - name: SAP HANA Backint - Setup - MS Azure Backup to MS Azure RSV - Download backint pre-registration script from constant script source url
-  get_url:
+  ansible.builtin.get_url:
     url: https://aka.ms/scriptforpermsonhana
     dest: "{{ sap_hana_backint_setup_temp_dir.path }}/msawb-plugin-config-com-sap-hana.sh"
     mode: '0775'
@@ -59,10 +59,10 @@
     group: sapsys
 
 - name: SAP HANA Backint - Setup - MS Azure Backup to MS Azure RSV - Execute msawb-plugin-config-com-sap-hana.sh
-  shell: |
+  ansible.builtin.shell: |
     bash "{{ sap_hana_backint_setup_temp_dir.path }}/msawb-plugin-config-com-sap-hana.sh" --sid {{ passed_sap_hana_sid }}
 
 - name: SAP HANA Backint - Setup - MS Azure Backup to MS Azure RSV - Output backint configuration information
-  debug:
+  ansible.builtin.debug:
     msg:
       - "backint directory  - {{ sap_hana_backint_setup_backint_directory }}"
