--- a/roles/sap_hana_backint/tasks/setup/setup_backint_gcs.yml
+++ b/roles/sap_hana_backint/tasks/setup/setup_backint_gcs.yml
@@ -1,13 +1,13 @@
 # Google Cloud Storage (GCS) Bucket
 
 - name: SAP HANA Backint - Execute - Set fact for SID
-  set_fact:
+  ansible.builtin.set_fact:
     passed_sap_hana_sid: "{{ sap_hana_sid }}"
   when: sap_hana_sid != "all"
 
 # Set initial facts
 - name: SAP HANA Backint - Setup - GCS - Set facts
-  set_fact:
+  ansible.builtin.set_fact:
     sap_hana_backint_setup_backint_directory: "/usr/sap/{{ passed_sap_hana_sid }}/SYS/global/hdb/opt"
     passed_sap_hana_instance_nr: "{{ sap_hana_instance_nr_one[0] }}"
 
@@ -16,7 +16,7 @@
   ansible.builtin.git:
     repo: https://github.com/chriselswede/hanacleaner.git
     dest: "$HOME/.ansible/tmp/git_hanacleaner"
-    single_branch: yes
+    single_branch: true
     version: master
 
 # Copy hanacleaner.py
@@ -25,30 +25,30 @@
     src: "$HOME/.ansible/tmp/git_hanacleaner/hanacleaner.py"
     dest: "{{ sap_hana_backint_setup_backint_directory }}/hanacleaner.py"
     mode: '0755'
-    remote_src: yes
+    remote_src: true
   register: hdbbackint_hanacleaner
 
 
 - name: SAP HANA Backint - Setup - GCS - Download temp dir
-  tempfile:
+  ansible.builtin.tempfile:
     state: directory
     suffix: gcs_download
   register: gcs_download
-  become: yes
+  become: true
   become_user: "{{ sap_hana_sid | lower }}adm"
 
 - name: SAP HANA Backint - Setup - GCS - Download Google Cloud Storage Backint agent for SAP HANA
-  get_url:
+  ansible.builtin.get_url:
     url: https://storage.googleapis.com/cloudsapdeploy/backint-gcs/install.sh
     dest: "{{ gcs_download.path }}/gcs_backint_install.sh"
     mode: '0775'
   become_user: "{{ sap_hana_sid | lower }}adm"
 
 - name: SAP HANA Backint - Setup - GCS - Execute install.sh (silent)
-  shell: "{{ gcs_download.path }}/gcs_backint_install.sh"
+  ansible.builtin.shell: "{{ gcs_download.path }}/gcs_backint_install.sh"
   args:
       executable: /bin/bash
-  become: yes
+  become: true
   become_user: "{{ sap_hana_sid | lower }}adm"
   environment:
     SAPSYSTEMNAME: "{{ passed_sap_hana_sid }}"
