--- a/roles/sap_hana_backint/tasks/setup/setup_tenants.yml
+++ b/roles/sap_hana_backint/tasks/setup/setup_tenants.yml
@@ -1,17 +1,17 @@
 # hdbuserstore
 
 - name: SAP HANA Backint - Setup - TENANTDB - {{ passed_sap_hana_tenant }} - Set facts
-  set_fact:
+  ansible.builtin.set_fact:
     sap_hana_backint_setup_hdbuserstore_tenant_backup_user: "HDB_TENANT_{{ passed_sap_hana_tenant }}_BACKUP_USER"
 
 # Create and Store Connection Info in hdbuserstore for TENANTDB
 - name: SAP HANA Backint - Setup - TENANTDB - {{ passed_sap_hana_tenant }} - Create and Store Connection Info in hdbuserstore
-  shell: |
+  ansible.builtin.shell: |
         /usr/sap/{{ sap_hana_sid}}/SYS/exe/hdb/hdbuserstore \
         SET {{ sap_hana_backint_setup_hdbuserstore_tenant_backup_user }} {{ ansible_hostname }}:3{{ passed_sap_hana_instance_nr }}15 SYSTEM '{{ sap_hana_backint_setup_system_tenant_passwd }}'
   args:
       executable: /bin/bash
-  become: yes
+  become: true
   become_user: "{{ sap_hana_sid | lower }}adm"
   register: sap_hana_backint_setup_hdbuserstore
 
@@ -23,7 +23,7 @@
   block:
   # Set parameter log_mode
   - name: SAP HANA Backint - Setup - TENANTDB - {{ passed_sap_hana_tenant }} - Set log_mode to normal
-    shell: |
+    ansible.builtin.shell: |
           /usr/sap/{{ sap_hana_sid }}/SYS/exe/hdb/hdbsql \
           -U {{ sap_hana_backint_setup_hdbuserstore_system_backup_user }} \
           -m <<EOF
@@ -31,13 +31,13 @@
           EOF
     args:
       executable: /bin/bash
-    become: yes
+    become: true
     become_user: "{{ sap_hana_sid | lower }}adm"
     register: sap_hana_backint_setup_log_mode
 
   # Set parameter log_backup
   - name: SAP HANA Backint - Setup - TENANTDB - {{ passed_sap_hana_tenant }} - Set log_backup_parameter_file
-    shell: |
+    ansible.builtin.shell: |
           /usr/sap/{{ sap_hana_sid }}/SYS/exe/hdb/hdbsql \
           -U {{ sap_hana_backint_setup_hdbuserstore_system_backup_user }} \
           -m <<EOF
@@ -45,11 +45,11 @@
           EOF
     args:
       executable: /bin/bash
-    become: yes
+    become: true
     become_user: "{{ sap_hana_sid | lower }}adm"
 
   - name: SAP HANA Backint - Setup - TENANTDB - {{ passed_sap_hana_tenant }} - Set log_backup_using_backint
-    shell: |
+    ansible.builtin.shell: |
           /usr/sap/{{ sap_hana_sid }}/SYS/exe/hdb/hdbsql \
           -U {{ sap_hana_backint_setup_hdbuserstore_system_backup_user }} \
           -m <<EOF
@@ -57,13 +57,13 @@
           EOF
     args:
       executable: /bin/bash
-    become: yes
+    become: true
     become_user: "{{ sap_hana_sid | lower }}adm"
   when: log_enable | bool
 
 # Set parameter catalog_backup
 - name: SAP HANA Backint - Setup - TENANTDB - {{ passed_sap_hana_tenant }} - Set catalog_backup_parameter_file
-  shell: |
+  ansible.builtin.shell: |
         /usr/sap/{{ sap_hana_sid }}/SYS/exe/hdb/hdbsql \
         -U {{ sap_hana_backint_setup_hdbuserstore_system_backup_user }} \
         -m <<EOF
@@ -71,11 +71,11 @@
         EOF
   args:
       executable: /bin/bash
-  become: yes
+  become: true
   become_user: "{{ sap_hana_sid | lower }}adm"
 
 - name: SAP HANA Backint - Setup - TENANTDB - {{ passed_sap_hana_tenant }} - Set catalog_backup_using_backint
-  shell: |
+  ansible.builtin.shell: |
         /usr/sap/{{ sap_hana_sid }}/SYS/exe/hdb/hdbsql \
         -U {{ sap_hana_backint_setup_hdbuserstore_system_backup_user }} \
         -m <<EOF
@@ -83,12 +83,12 @@
         EOF
   args:
       executable: /bin/bash
-  become: yes
+  become: true
   become_user: "{{ sap_hana_sid | lower }}adm"
 
 # Set parameter data_backup
 - name: SAP HANA Backint - Setup - TENANTDB - {{ passed_sap_hana_tenant }} - Set data_backup_parameter_file
-  shell: |
+  ansible.builtin.shell: |
         /usr/sap/{{ sap_hana_sid }}/SYS/exe/hdb/hdbsql \
         -U {{ sap_hana_backint_setup_hdbuserstore_system_backup_user }} \
         -m <<EOF
@@ -96,5 +96,5 @@
         EOF
   args:
       executable: /bin/bash
-  become: yes
+  become: true
   become_user: "{{ sap_hana_sid | lower }}adm"
