--- a/roles/sap_fapolicy/tasks/enable_fapolicy.yml
+++ b/roles/sap_fapolicy/tasks/enable_fapolicy.yml
@@ -1,5 +1,7 @@
-- name: SAP Faplocy - Service fapolicy state - enable
-  ansible.builtin.command: "systemctl enable fapolicyd"
+---
 
-- name: SAP Faplocy - Service fapolicy state - start
-  ansible.builtin.command: "systemctl start fapolicyd"
+- name: SAP Faplocy - Service fapolicy state - start & enable
+  ansible.builtin.systemd:
+    state: started
+    name: fapolicyd
+    enabled: yes
