--- a/roles/sap_firewall/tasks/enable_firewall.yml
+++ b/roles/sap_firewall/tasks/enable_firewall.yml
@@ -1,5 +1,7 @@
-- name: SAP Firewall - Service firewalld state - enable
-  ansible.builtin.command: "systemctl enable firewalld"
-
-- name: SAP Firewall - Service firewalld state - start
-  ansible.builtin.command: "systemctl start firewalld"
+---
+- name: SAP Firewall - Service firewalld state - start & enable
+  ansible.builtin.systemd:
+    name: firewalld
+    state: started
+    enabled: yes
+    masked: no
