--- a/roles/sap_hana_backint/tasks/setup/setup_backint_azure_backup_rsv.yml
+++ b/roles/sap_hana_backint/tasks/setup/setup_backint_azure_backup_rsv.yml
@@ -1,3 +1,4 @@
+---
 # Microsoft Azure
 
 - name: SAP HANA Backint - Execute - Set fact for SID
@@ -11,13 +12,11 @@
     sap_hana_backint_setup_backint_directory: "/usr/sap/{{ passed_sap_hana_sid }}/SYS/global/hdb/opt"
     passed_sap_hana_instance_nr: "{{ sap_hana_instance_nr_one[0] }}"
 
-
 - name: SAP HANA Backint - Setup - MS Azure Backup to MS Azure RSV - Download backint pre-registration script from constant script source url
   ansible.builtin.get_url:
     url: https://aka.ms/scriptforpermsonhana
     dest: "{{ sap_hana_backint_setup_temp_dir.path }}/msawb-plugin-config-com-sap-hana.sh"
-    mode: '0775'
-
+    mode: "0775"
 
 # Change directory owner and permission
 - name: SAP HANA Backint - Setup - MS Azure Backup to MS Azure RSV - Change directory owner and permission
@@ -25,10 +24,9 @@
     path: "{{ sap_hana_backint_setup_backint_directory }}"
     state: directory
     recurse: yes
-    mode: '0755'
+    mode: "0755"
     owner: "{{ passed_sap_hana_sid | lower }}adm"
     group: sapsys
-
 
 # Setup
 
@@ -44,7 +42,7 @@
   ansible.builtin.copy:
     src: "$HOME/.ansible/tmp/git_hanacleaner/hanacleaner.py"
     dest: "{{ sap_hana_backint_setup_backint_directory }}/hanacleaner.py"
-    mode: '0755'
+    mode: "0755"
     remote_src: yes
   register: hdbbackint_hanacleaner
 
@@ -54,7 +52,7 @@
     path: "{{ sap_hana_backint_setup_backint_directory }}"
     state: directory
     recurse: yes
-    mode: '0755'
+    mode: "0755"
     owner: "{{ passed_sap_hana_sid | lower }}adm"
     group: sapsys
 
