--- a/roles/sap_hana_backint/tasks/setup/setup_backint_gcs.yml
+++ b/roles/sap_hana_backint/tasks/setup/setup_backint_gcs.yml
@@ -1,3 +1,4 @@
+---
 # Google Cloud Storage (GCS) Bucket
 
 - name: SAP HANA Backint - Execute - Set fact for SID
@@ -11,7 +12,6 @@
     sap_hana_backint_setup_backint_directory: "/usr/sap/{{ passed_sap_hana_sid }}/SYS/global/hdb/opt"
     passed_sap_hana_instance_nr: "{{ sap_hana_instance_nr_one[0] }}"
 
-
 - name: SAP HANA Backint - Setup - GCS - Clone hanacleaner.py
   ansible.builtin.git:
     repo: https://github.com/chriselswede/hanacleaner.git
@@ -24,10 +24,9 @@
   ansible.builtin.copy:
     src: "$HOME/.ansible/tmp/git_hanacleaner/hanacleaner.py"
     dest: "{{ sap_hana_backint_setup_backint_directory }}/hanacleaner.py"
-    mode: '0755'
+    mode: "0755"
     remote_src: true
   register: hdbbackint_hanacleaner
-
 
 - name: SAP HANA Backint - Setup - GCS - Download temp dir
   ansible.builtin.tempfile:
@@ -41,18 +40,17 @@
   ansible.builtin.get_url:
     url: https://storage.googleapis.com/cloudsapdeploy/backint-gcs/install.sh
     dest: "{{ gcs_download.path }}/gcs_backint_install.sh"
-    mode: '0775'
+    mode: "0775"
   become_user: "{{ sap_hana_sid | lower }}adm"
 
 - name: SAP HANA Backint - Setup - GCS - Execute install.sh (silent)
   ansible.builtin.shell: "{{ gcs_download.path }}/gcs_backint_install.sh"
   args:
-      executable: /bin/bash
+    executable: /bin/bash
   become: true
   become_user: "{{ sap_hana_sid | lower }}adm"
   environment:
     SAPSYSTEMNAME: "{{ passed_sap_hana_sid }}"
-
 # Add task to process /usr/sap/SID/SYS/global/hdb/opt/backint/backint-gcs/parameters.txt
 # Use /templates/gcs_config.cfg
 #catalog_backup_parameter_file /usr/sap/SID/SYS/global/hdb/opt/backint/backint-gcs/parameters-catalog.txt
