--- a/roles/sap_pyrfc/tasks/python_pyrfc_init.yml
+++ b/roles/sap_pyrfc/tasks/python_pyrfc_init.yml
@@ -7,7 +7,7 @@
   ansible.builtin.file:
     path: "{{ item }}"
     state: directory
-    mode: '0755'
+    mode: "0755"
   with_items:
     - "/software"
     - "/usr/local/sap"
