--- a/roles/sap_rhsm/tasks/rhsm_refresh.yml
+++ b/roles/sap_rhsm/tasks/rhsm_refresh.yml
@@ -1,23 +1,22 @@
 - name: SAP OS Tools - RedHat Subscription Manager - Refresh - {{ ansible_distribution }} - {{ ansible_distribution_version }}
   block:
-
     - name: Subscription Manager - Refresh
-      ansible.builtin.command: 'subscription-manager refresh'
+      ansible.builtin.command: "subscription-manager refresh"
 
     - name: Subscription Manager - Identity Regenerate
-      ansible.builtin.command: 'subscription-manager identity --regenerate'
+      ansible.builtin.command: "subscription-manager identity --regenerate"
 
     - name: Subscription Manager - Lock Release
-      ansible.builtin.command: 'subscription-manager release --set={{ ansible_distribution_version }}'
-    
+      ansible.builtin.command: "subscription-manager release --set={{ ansible_distribution_version }}"
+
     - name: Yum clean all
-      ansible.builtin.command: 'yum clean all'
+      ansible.builtin.command: "yum clean all"
 
     - name: Clear dnf cache
       ansible.builtin.file:
         path: /var/cache/dnf
         state: absent
-    
+
     - name: Clear rhsm packages
       ansible.builtin.file:
         path: /var/lib/rhsm/packages/packages.json
@@ -27,5 +26,5 @@
       ansible.builtin.service:
         name: rhsmcertd
         state: restarted
-  
+
   when: ansible_facts['distribution'] == 'RedHat'
