--- a/roles/sap_hana_backint/tasks/setup/setup_backint_ibm_cos_s3.yml
+++ b/roles/sap_hana_backint/tasks/setup/setup_backint_ibm_cos_s3.yml
@@ -41,21 +41,22 @@
   ansible.builtin.debug:
     msg: "{{ __sap_hana_backint_agent_s3.files[0].path }}"
 
-# src must end in forward-slash / to copy directory contents - https://docs.ansible.com/ansible/latest/collections/ansible/builtin/copy_module.html#parameter-src
+# src must end in forward-slash / to copy directory contents -
+# https://docs.ansible.com/ansible/latest/collections/ansible/builtin/copy_module.html#parameter-src
 - name: SAP HANA Backint - Setup - IBM COS - Copy temp directory contents to SAP HANA Backint directory
   ansible.builtin.copy:
     src: "{{ __sap_hana_backint_agent_s3.files[0].path }}/"
     dest: "{{ sap_hana_backint_setup_backint_directory }}"
     mode: "0755"
-    directory_mode: yes
-    remote_src: yes
+    directory_mode: true
+    remote_src: true
 
 # Change directory owner and permission
 - name: SAP HANA Backint - Setup - IBM COS - Change directory owner and permission
   ansible.builtin.file:
     path: "{{ sap_hana_backint_setup_backint_directory }}"
     state: directory
-    recurse: yes
+    recurse: true
     mode: "0755"
     owner: "{{ passed_sap_hana_sid | lower }}adm"
     group: sapsys
@@ -70,7 +71,7 @@
   ansible.builtin.git:
     repo: https://github.com/chriselswede/hanacleaner.git
     dest: "$HOME/.ansible/tmp/git_hanacleaner"
-    single_branch: yes
+    single_branch: true
     version: master
 
 # Copy hanacleaner.py
@@ -79,7 +80,7 @@
     src: "$HOME/.ansible/tmp/git_hanacleaner/hanacleaner.py"
     dest: "{{ sap_hana_backint_setup_backint_directory }}/hanacleaner.py"
     mode: "0755"
-    remote_src: yes
+    remote_src: true
   register: hdbbackint_hanacleaner
 
 # Softlink Python
