--- a/roles/sap_hana_backint/tasks/setup/setup_backint_azure_backup_rsv.yml
+++ b/roles/sap_hana_backint/tasks/setup/setup_backint_azure_backup_rsv.yml
@@ -23,7 +23,7 @@
   ansible.builtin.file:
     path: "{{ sap_hana_backint_setup_backint_directory }}"
     state: directory
-    recurse: yes
+    recurse: true
     mode: "0755"
     owner: "{{ passed_sap_hana_sid | lower }}adm"
     group: sapsys
@@ -34,7 +34,7 @@
   ansible.builtin.git:
     repo: https://github.com/chriselswede/hanacleaner.git
     dest: "$HOME/.ansible/tmp/git_hanacleaner"
-    single_branch: yes
+    single_branch: true
     version: master
 
 # Copy hanacleaner.py
@@ -43,7 +43,7 @@
     src: "$HOME/.ansible/tmp/git_hanacleaner/hanacleaner.py"
     dest: "{{ sap_hana_backint_setup_backint_directory }}/hanacleaner.py"
     mode: "0755"
-    remote_src: yes
+    remote_src: true
   register: hdbbackint_hanacleaner
 
 # Change directory owner and permission
@@ -51,7 +51,7 @@
   ansible.builtin.file:
     path: "{{ sap_hana_backint_setup_backint_directory }}"
     state: directory
-    recurse: yes
+    recurse: true
     mode: "0755"
     owner: "{{ passed_sap_hana_sid | lower }}adm"
     group: sapsys
